--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -45,10 +45,12 @@ felix.auto.start.1= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8
 felix.auto.start.2= \
  reference:file:sc-bundles/util.jar
 
-felix.auto.start.3= \
+ 
+felix.auto.start.4= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
+ reference:file:sc-bundles/splashscreen.jar \
  reference:file:sc-bundles/fileaccess.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:sc-bundles/contactlist.jar \
@@ -61,7 +63,7 @@ felix.auto.start.3= \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/meta-cl.jar
 
-felix.auto.start.4= \
+felix.auto.start.5= \
  reference:file:sc-bundles/history.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
