set separate level for splashscreen so that it is loaded before other bundles with the same level. (this does not happen on installations that already contain all bundles and where the splash screen is added just now)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2131 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -34,7 +34,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  edu.stanford.ejalbert.exception; \
  edu.stanford.ejalbert.exceptionhandler;
 
-felix.auto.start.1= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
+felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
 #reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
 #\
 # file:lib/bundle/shell.jar \
@@ -42,15 +42,17 @@ felix.auto.start.1= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8
 # file:lib/bundle/servicebinder.jar \
 # file:lib/bundle/tablelayout.jar
 
-felix.auto.start.2= \
+felix.auto.start.20= \
  reference:file:sc-bundles/util.jar
 
- 
-felix.auto.start.4= \
+
+felix.auto.start.40= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/splashscreen.jar \
+
+felix.auto.start.50= \
  reference:file:sc-bundles/fileaccess.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:sc-bundles/contactlist.jar \
@@ -63,7 +65,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/meta-cl.jar
 
-felix.auto.start.5= \
+felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
@@ -87,8 +89,8 @@ felix.auto.start.5= \
 # file:lib/bundle/architectureviewer1.1.jar
 
 #Specify the directory where oscar should deploy its bundles
-felix.cache.profiledir=sip-communicator.bin
-
+ felix.cache.profiledir=sip-communicator.bin
+#felix.cache.profiledir=${user.home}/.sip-communicator/profiledir
 
 felix.startlevel.framework=100
 felix.startlevel.bundle=100
