--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -30,9 +30,9 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.naming.directory; \
  javax.sound;\
  javax.sound.sampled; \
- edu.stanford.ejalbert; \
- edu.stanford.ejalbert.exception; \
- edu.stanford.ejalbert.exceptionhandler;
+ org.jdesktop.jdic.tray; \
+ org.jdesktop.jdic.desktop; \
+ com.apple.eio;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
 #reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
@@ -54,6 +54,7 @@ felix.auto.start.40= \
 
 felix.auto.start.50= \
  reference:file:sc-bundles/fileaccess.jar \
+ reference:file:sc-bundles/browserlauncher.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:sc-bundles/contactlist.jar \
  reference:file:sc-bundles/media.jar \
@@ -73,8 +74,9 @@ felix.auto.start.60= \
 
 
  felix.auto.start.66= \
- reference:file:sc-bundles/swing-ui.jar
-
+ reference:file:sc-bundles/swing-ui.jar \
+ reference:file:sc-bundles/systray.jar
+ 
  felix.auto.start.67= \
  reference:file:sc-bundles/icqaccregwizz.jar \
  reference:file:sc-bundles/sipaccregwizz.jar \
