update eclipse classpath
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2153 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/bundle/junit.jar"/>
-	<classpathentry kind="lib" path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/jmf-all/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/jmf-lin/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/jmf-sol/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/jmf-win/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/jmf-win/sound.jar"/>
-	<classpathentry kind="lib" path="lib/bcprov-jdk14-130.jar"/>
-	<classpathentry kind="lib" path="lib/BrowserLauncher2.jar"/>
-	<classpathentry kind="lib" path="lib/cindy.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/concurrent.jar"/>
-	<classpathentry kind="lib" path="lib/felix.jar"/>
-	<classpathentry kind="lib" path="lib/JainSipApi1.2.jar"/>
-	<classpathentry kind="lib" path="lib/JainSipRi1.2.jar"/>
-	<classpathentry kind="lib" path="lib/joscar-0.9.4-cvs-bin.jar"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/kxml-min.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="lib/nist-sdp-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/oscar-aim.jar"/>
-	<classpathentry kind="lib" path="lib/retroweaver.jar"/>
-	<classpathentry kind="lib" path="lib/retroweaver-rt.jar"/>
-	<classpathentry kind="lib" path="lib/servicebinder.jar"/>
-	<classpathentry kind="lib" path="lib/smack.jar"/>
-	<classpathentry kind="lib" path="lib/smackx.jar"/>
-	<classpathentry kind="lib" path="lib/Stun4J.jar"/>
-	<classpathentry kind="lib" path="lib/growl.jar"/>
-	<classpathentry kind="lib" path="lib/jspeex.jar"/>
-	<classpathentry kind="lib" path="lib/jml-1.0b1.jar"/>
-	<classpathentry kind="lib" path="lib/ymsg_network_v0_61.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry path="src" kind="src"/>
+	<classpathentry path="test" kind="src"/>
+	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
+	<classpathentry path="lib/bundle/junit.jar" kind="lib"/>
+	<classpathentry path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/windows/jdic_stub.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/windows/jmf.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/windows/sound.jar" kind="lib"/>
+	<classpathentry path="lib/AppleJavaExtensions.jar" kind="lib"/>
+	<classpathentry path="lib/bcprov-jdk14-130.jar" kind="lib"/>
+	<classpathentry path="lib/cindy.jar" kind="lib"/>
+	<classpathentry path="lib/commons-logging.jar" kind="lib"/>
+	<classpathentry path="lib/concurrent.jar" kind="lib"/>
+	<classpathentry path="lib/felix.jar" kind="lib"/>
+	<classpathentry path="lib/growl.jar" kind="lib"/>
+	<classpathentry path="lib/JainSipApi1.2.jar" kind="lib"/>
+	<classpathentry path="lib/JainSipRi1.2.jar" kind="lib"/>
+	<classpathentry path="lib/jdic-all.jar" kind="lib"/>
+	<classpathentry path="lib/jmf.jar" kind="lib"/>
+	<classpathentry path="lib/jml-1.0b1.jar" kind="lib"/>
+	<classpathentry path="lib/joscar-0.9.4-cvs-bin.jar" kind="lib"/>
+	<classpathentry path="lib/jspeex.jar" kind="lib"/>
+	<classpathentry path="lib/junit.jar" kind="lib"/>
+	<classpathentry path="lib/kxml-min.jar" kind="lib"/>
+	<classpathentry path="lib/log4j-1.2.8.jar" kind="lib"/>
+	<classpathentry path="lib/nist-sdp-1.0.jar" kind="lib"/>
+	<classpathentry path="lib/oscar-aim.jar" kind="lib"/>
+	<classpathentry path="lib/retroweaver.jar" kind="lib"/>
+	<classpathentry path="lib/retroweaver-rt.jar" kind="lib"/>
+	<classpathentry path="lib/servicebinder.jar" kind="lib"/>
+	<classpathentry path="lib/smack.jar" kind="lib"/>
+	<classpathentry path="lib/smackx.jar" kind="lib"/>
+	<classpathentry path="lib/Stun4J.jar" kind="lib"/>
+	<classpathentry path="lib/ymsg_network_v0_61.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/linux/jdic_stub.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/linux/jmf.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/mac/jdic_stub.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/mac/jmf.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/solaris/jdic_stub.jar" kind="lib"/>
+	<classpathentry path="lib/os-specific/solaris/jmf.jar" kind="lib"/>
+	<classpathentry path="bin" kind="output"/>
 </classpath>
