--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -55,7 +55,7 @@ install: build
 	cp -r $(BASEDIR)/lib/native/linux debian/sip-communicator/usr/share/sip-communicator/lib/native
 	rm -rf debian/sip-communicator/usr/share/sip-communicator/lib/native/CVS
 	cp $(BASEDIR)/lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar debian/sip-communicator/usr/share/sip-communicator/lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
-	cp -r $(BASEDIR)/sc-bundles debian/sip-communicator/usr/share/sip-communicator
+	cp $(BASEDIR)/sc-bundles/*.jar debian/sip-communicator/usr/share/sip-communicator/sc-bundles
 	install -m 755 debian/sip-communicator.sh debian/sip-communicator/usr/bin/sip-communicator
 
 	# Remove all slicks
