--- a/build.xml
+++ b/build.xml
@@ -447,32 +447,28 @@
             description="Create a .deb package for Debian (needs dpkg utilities)">
 
       <!-- Prepare the changelog file for the version number -->
-      <exec executable="/bin/sed"
-          dir="${inst.resrc}/debian"
-          input="${inst.resrc}/debian/changelog.tmpl"
-          output="${inst.resrc}/debian/changelog" >
-        <arg value="s/_VERSION_/${sip-communicator.version}/"/>
-      </exec>
+      <copy file="${inst.resrc}/debian/changelog.tmpl"
+          tofile="${inst.resrc}/debian/changelog"
+          overwrite="true"/>
+      <replace file="${inst.resrc}/debian/changelog"
+          token="_VERSION_"
+          value="${sip-communicator.version}"/>
 
       <!-- Put the current date in the changelog -->
-      <exec executable="/bin/date"
-          outputproperty="date" >
-        <arg value="-R"/>
-      </exec>
-      <exec executable="/bin/sed"
-          dir="${inst.resrc}/debian"
-          input="${inst.resrc}/debian/changelog"
-          output="${inst.resrc}/debian/changelog" >
-        <arg value="s/_DATE_/${date}/"/>
-      </exec>
+      <tstamp>
+        <format property="date" pattern="EEE, d MMM yyyy HH:mm:ss Z"/>
+      </tstamp>
+      <replace file="${inst.resrc}/debian/changelog"
+          token="_DATE_"
+          value="${date}"/>
 
       <!-- Put correct version in the sip-communicator executable file -->
-      <exec executable="/bin/sed"
-          dir="${inst.resrc}/debian"
-          input="${inst.resrc}/debian/sip-communicator.sh.tmpl"
-          output="${inst.resrc}/debian/sip-communicator.sh" >
-        <arg value="s/_SC_VERSION_/${sip-communicator.version}/"/>
-      </exec>
+      <copy file="${inst.resrc}/debian/sip-communicator.sh.tmpl"
+          tofile="${inst.resrc}/debian/sip-communicator.sh"
+   	      overwrite="true"/>
+      <replace file="${inst.resrc}/debian/sip-communicator.sh"
+          token="_SC_VERSION_"
+          value="${sip-communicator.version}"/>
 
       <exec executable="/usr/bin/dpkg-buildpackage" dir="${inst.resrc}">
         <arg value="-rfakeroot"/>
