--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -55,7 +55,7 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 ############################################################
 
 # We don't want trace logs from joscar and joustsim
-net.kano.level = INFO
+net.kano.level = FINEST
 
 # We don't want trace logs from java-jml
 net.sf.cindy.impl.level = INFO
